--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,7 +188,9 @@ button:hover .tooltip {
     overflow: hidden;
 }
 #full-illust {
+    width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 .tap-head,
 .tap-chest {
